--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -91,6 +91,7 @@
 
 .caption {
   font-size: 1rem;
+  font-weight: bold;
   color: #333; /* Warna teks gelap untuk caption */
   margin-top: 1rem;
   text-align: center;
