--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,7 @@ html {
 .description {
   font-weight: 400; /* Normal untuk deskripsi */
 }
+
+body {
+  padding-top: 60px; /* Sesuaikan dengan tinggi navbar */
+}
