--- a/src/styles/Experiences.module.css
+++ b/src/styles/Experiences.module.css
@@ -154,6 +154,7 @@
   padding-left: 1.5rem; /* Menambahkan padding kiri untuk daftar */
   list-style-type: disc; /* Menampilkan bullet points */
   margin-top: 0.5rem;
+  text-align: justify;
 }
 
 .description li {
