--- a/src/styles/HeroSection.module.css
+++ b/src/styles/HeroSection.module.css
@@ -4,11 +4,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 3.5rem;
+  padding: 1rem;
   position: relative;
   overflow: hidden;
   background-color: #f8f9fa;
   min-height: 100vh;
+  padding-bottom: 0.3rem;
 }
 
 /* Animasi Partikel */
@@ -78,6 +79,8 @@
   border-radius: 50%;
   object-fit: cover;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+  position: relative; /* Menambahkan positioning untuk menggunakan z-index */
+  z-index: 10; /* Pastikan nilainya lebih tinggi dari elemen lain */
 }
 
 /* Kelas untuk flip card */
@@ -161,6 +164,26 @@
 
 .animateText.fade-in {
   opacity: 1;
+}
+
+/* Tambahkan di bawah .heroButton atau di tempat yang sesuai dalam file CSS */
+
+.socialIcons {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+  margin-top: 1.5rem;
+}
+
+.icon {
+  font-size: 1.8rem;
+  color: #333;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+
+.icon:hover {
+  color: #007acc;
 }
 
 /* Responsif untuk perangkat mobile */
