--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,7 +1,7 @@
 /* src/styles/Navbar.module.css */
 
 .navbar {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -12,6 +12,7 @@
   padding: 0.5rem 2rem;
   background-color: #f8f9fa;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 /* Style untuk logo */
