--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -1,5 +1,5 @@
 .about-section {
-  background-color: #f8f9fa;
+  background-color: #1c1c1c;
   padding: 0.5rem;
   display: flex;
   justify-content: center;
@@ -25,7 +25,7 @@
 
 .about-image {
   border-radius: 30px;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 12px rgba(255, 255, 255, 0.925);
   object-fit: cover;
   width: 100%; /* Mengatur lebar penuh agar responsif */
   height: auto; /* Mengatur tinggi otomatis untuk mempertahankan rasio */
@@ -42,14 +42,14 @@
 .about-title {
   font-size: 2.5rem;
   font-weight: bold;
-  color: #333;
+  color: #ffffff;
   margin-top: 0.5rem;
 }
 
 .about-description {
   font-size: 1rem;
   line-height: 1.6;
-  color: #555;
+  color: #cfcfcf;
   text-align: justify;
 }
 
@@ -57,13 +57,13 @@
 .about-skills {
   margin-top: 2rem;
   padding-top: 1rem;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #333;
 }
 
 .skills-title {
   font-size: 1.5rem;
   font-weight: 600;
-  color: #333;
+  color: #ffffff;
 }
 
 .skills-list {
@@ -77,18 +77,22 @@
 
 .skills-list li {
   padding: 1rem;
-  background-color: #e0e4e8;
-  border-radius: 5px;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.05);
+  background-color: #2a2a2a;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(255, 255, 255, 0.8);
   text-align: left;
   font-size: 1rem;
-  color: #555;
+  color: #e0e0e0;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 .toggle-button {
   background: none;
   border: none;
-  color: #0070f3;
+  color: #66ccff;
   cursor: pointer;
   font-size: 1rem;
   font-weight: bold;
