--- a/src/styles/Certifications.module.css
+++ b/src/styles/Certifications.module.css
@@ -1,6 +1,6 @@
 .certificationsSection {
   padding: 4rem 2rem;
-  background-color: #f8f9fa; /* Warna abu muda untuk kontras */
+  background-color: #1e1e1e; /* Warna abu muda untuk kontras */
 }
 
 .sectionTitle {
@@ -8,7 +8,7 @@
   font-weight: bold;
   text-align: center;
   margin-bottom: 2rem;
-  color: #333; /* Warna gelap */
+  color: #ffffff; /* Warna gelap */
 }
 
 .certificationGrid {
@@ -35,8 +35,8 @@
 }
 
 .certificationCard {
-  background-color: #ffffff;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+  background-color: #2a2a2a;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
   border-radius: 8px;
   overflow: hidden;
   text-align: left;
@@ -50,6 +50,7 @@
 
 .certificationCard:hover {
   transform: translateY(-5px); /* Efek hover */
+  box-shadow: 0px 6px 16px rgb(255, 255, 255, 0.5);
 }
 
 .certificateImage {
@@ -64,12 +65,12 @@
   font-size: 1.3rem;
   font-weight: 600;
   margin: 0.9rem 0;
-  color: #333;
+  color: #ffffff;
 }
 
 .certificateDescription {
   font-size: 1rem;
-  color: #555;
+  color: #cccccc;
   margin: 0.5rem 0;
   text-align: left;
   list-style-type: disc;
@@ -79,7 +80,7 @@
 .certificateLink {
   display: inline-block;
   margin-top: auto; /* Jarak ekstra agar credential tetap di bawah */
-  color: #2c3b4b;
+  color: #66ccff;
   text-decoration: none;
   font-weight: bold;
   text-align: left;
@@ -100,7 +101,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #4a90e2;
+  background-color: #444;
   color: #fff;
   padding: 0.5rem 1.5rem;
   border: none;
@@ -133,7 +134,7 @@
 .viewMoreButton:hover {
   height: 80px;
   padding: 2rem 3rem;
-  background-color: #0070f3;
+  background-color: #5b9bd5;
   transform: translateY(-5px);
   -webkit-transform: translateY(-5px);
   -moz-transform: translateY(-5px);
