--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
-  background-color: #333;
-  color: #f9f9f9;
+  background-color: #1e1e1e;
+  color: #e0e0e0;
   padding: 1.5rem 0rem;
   text-align: center;
 }
@@ -20,12 +20,12 @@
 
 .icon {
   font-size: 1.5rem;
-  color: #f9f9f9;
+  color: #e0e0e0;
   transition: color 0.3s ease;
 }
 
 .icon:hover {
-  color: #007acc;
+  color: #66ccff;
 }
 
 .info {
@@ -36,7 +36,7 @@
 
 .link {
   /* Gantikan selector a dengan .link */
-  color: #007acc;
+  color: #66ccff;
   text-decoration: none;
 }
 
@@ -47,4 +47,5 @@
 .copyright {
   font-size: 0.85rem;
   margin: 0.5rem 0;
+  color: #aaaaaa;
 }
