--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 2rem;
-  background-color: #f8f9fa;
+  background-color: #1c1c1c;
   box-sizing: border-box;
   z-index: 1;
 }
@@ -19,7 +19,7 @@
 .logo {
   font-size: 2rem;
   font-weight: 600;
-  color: #333;
+  color: #e0e0e0;
   text-decoration: none; /* Menghapus garis bawah */
   border-bottom: none; /* Menghapus border bawah jika ada */
 }
@@ -34,11 +34,12 @@
   display: flex;
   gap: 1.6rem;
   font-size: 1.3rem;
+  background-color: #1c1c1c;
 }
 
 /* Style untuk link */
 .navLinks li a {
-  color: #333;
+  color: #e0e0e0;
   text-decoration: none;
   font-weight: 500;
   position: relative;
@@ -53,13 +54,13 @@
   bottom: -5px;
   width: 0;
   height: 2px;
-  background-color: #1e90ff;
+  background-color: #66ccff;
   transition: width 0.3s ease-in-out;
 }
 
 /* Saat di-hover */
 .navLinks li a:hover {
-  color: #1e90ff;
+  color: #66ccff;
 }
 
 .navLinks li a:hover::after {
@@ -74,7 +75,7 @@
 
 .dropdownToggle {
   cursor: pointer;
-  color: #1e90ff;
+  color: #66ccff;
 }
 
 /* Style untuk dropdown menu */
@@ -82,8 +83,8 @@
   position: absolute;
   top: 30px; /* Jarak dari menu utama */
   right: 0; /* Geser dropdown sepenuhnya ke kanan */
-  background-color: #fff;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #333;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   padding: 1rem;
   border-radius: 8px;
   display: flex;
@@ -93,7 +94,7 @@
 }
 
 .dropdownMenu a {
-  color: #333;
+  color: #e0e0e0;
   padding: 0.5rem 1rem;
   text-decoration: none;
   border-radius: 4px;
@@ -101,7 +102,7 @@
 }
 
 .dropdownMenu a:hover {
-  background-color: #f0f0f0;
+  background-color: #e0e0e0;
 }
 
 /* Style untuk hamburger menu */
@@ -120,7 +121,7 @@
 }
 
 .change {
-  background-color: #1e90ff;
+  background-color: #ffff;
 }
 
 /* Media query untuk layar di bawah 768px */
@@ -130,7 +131,7 @@
     flex-direction: column;
     gap: 1rem;
     padding: 1rem 0;
-    background-color: #f8f9fa;
+    background-color: #1c1c1c;
     position: absolute;
     top: 60px;
     left: 0;
