--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -22,6 +22,8 @@
   color: #e0e0e0;
   text-decoration: none; /* Menghapus garis bawah */
   border-bottom: none; /* Menghapus border bawah jika ada */
+  padding-left: 0.8rem;
+  padding-top: 0.1px;
 }
 
 .logo:hover {
