--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -117,7 +117,7 @@
 .bar {
   height: 3px;
   width: 25px;
-  background-color: #333;
+  background-color: #e0e0e0;
   margin: 4px 0;
   transition: 0.4s;
 }
