--- a/src/styles/Certifications.module.css
+++ b/src/styles/Certifications.module.css
@@ -53,6 +53,17 @@
   box-shadow: 0px 6px 16px rgb(255, 255, 255, 0.5);
 }
 
+.scrollFadeIn {
+  opacity: 1 !important;
+  transform: translateY(0) !important;
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+.hidden {
+  opacity: 0;
+  transform: translateY(20px);
+}
+
 .certificateImage {
   width: 100%;
   height: auto;
@@ -118,13 +129,15 @@
   -o-border-radius: 50px;
   padding-right: 3rem;
   padding-left: 3rem;
+  text-decoration: none;
+  -webkit-text-decoration: none;
 }
 
 .viewMoreButton:hover {
-  background-color: #5b9bd5; /* Warna saat hover lebih cerah */
-  height: 70px; /* Tinggi saat hover */
-  padding: 1rem 1.5rem; /* Menambah padding saat hover */
-  transform: translateY(-5px); /* Efek sedikit mengangkat saat hover */
+  background-color: #5b9bd5;
+  height: 40px;
+  padding: 1rem 1.5rem;
+  transform: translateY(-5px);
 }
 
 .viewMoreButton:active {
@@ -132,7 +145,7 @@
 }
 
 .viewMoreButton:hover {
-  height: 80px;
+  height: 25px;
   padding: 2rem 3rem;
   background-color: #5b9bd5;
   transform: translateY(-5px);
