--- a/src/styles/Experiences.module.css
+++ b/src/styles/Experiences.module.css
@@ -12,6 +12,25 @@
   );
 }
 
+/* Kelas awal untuk menyembunyikan elemen */
+.hidden {
+  opacity: 0;
+  transform: translateY(
+    30px
+  ); /* Elemen mulai lebih rendah untuk efek slide-up */
+}
+
+/* Efek animasi untuk saat elemen muncul */
+.scrollFadeIn {
+  opacity: 1 !important;
+  transform: translateY(0) !important;
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  -webkit-transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  -moz-transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  -ms-transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  -o-transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+
 /* Bubble Dekoratif */
 .experiences::before,
 .experiences::after,
