--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@ html {
   padding: 0;
   font-family: "Plus Jakarta Sans", sans-serif; /* Gunakan font Jakarta Sans */
   box-sizing: border-box;
+  background-color: grey;
 }
 
 /* Tambahkan padding pada kontainer utama agar konten tidak terlalu menempel ke tepi */
