update mobile responsive route certifications

--- a/src/app/certifications/certificate.module.css
+++ b/src/app/certifications/certificate.module.css
@@ -200,6 +200,7 @@
 @media (max-width: 768px) {
   .content {
     padding: 1rem; /* Mengurangi padding pada konten */
+    height: auto;
   }
 
   .title {
